--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,4 +5,9 @@
   background-color: #000000;
   border: 2px solid #FFFFFF;
   border-radius: 2px;
+  transition: opacity 0.7s;
+}
+
+.profile__add-button:hover {
+  opacity: 0.6;
 }
