--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -5,4 +5,9 @@
   margin-top: 15px;
   background-color: #000000;
   border: #ffffff solid 1px;
+  transition: opacity 0.7s;
+}
+
+.profile__edit-button:hover {
+  opacity: 0.6;
 }
