--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,6 +1,6 @@
 .content {
-  width: 68.75%;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
+  max-width: 880px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 51px;
 }
