--- a/pages/index.css
+++ b/pages/index.css
@@ -3,13 +3,13 @@
 
 @import url(../blocks/page/page.css);
 @import url(../blocks/page/__header/page__header.css);
+@import url(../blocks/page/__content/page__content.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__line/header__line.css);
 
 @import url(../blocks/content/content.css);
-@import url(../blocks/page/__content/page__content.css);
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__name/profile__name.css);
@@ -20,3 +20,12 @@
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__left-items/profile__left-items.css);
+
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__container/elements__container.css);
+
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__photo/element__photo.css);
+@import url(../blocks/element/__footer/element__footer.css);
+@import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__like/element__like.css);
