Добавлен адаптив для планшетов

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,3 +5,9 @@
   grid-column-gap: 17px;
   grid-row-gap: 20px;
 }
+
+@media screen and (max-width: 984px) {
+  .elements {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
