--- a/blocks/profile/__left-items/profile__left-items.css
+++ b/blocks/profile/__left-items/profile__left-items.css
@@ -3,3 +3,10 @@
   align-items: center;
   gap: 30px;
 }
+
+@media screen and (max-width: 984px) {
+  .profile__left-items {
+    flex-direction: column;
+    gap: 26px;
+  }
+}
