--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -11,3 +11,9 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+@media screen and (max-width: 600px) {
+  .elements {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
