--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -16,3 +16,9 @@
   flex-direction: column;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 600px) {
+  .page {
+    padding: 28px 0 36px;
+  }
+}
