--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -7,3 +7,10 @@
   line-height: 48px;
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 600px) {
+  .profile__name {
+    font-size: 27px;
+    line-height: 33px;
+  }
+}
