--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -8,3 +8,10 @@
   color: #FFFFFF;
   margin-top: 16px;
 }
+
+@media screen and (max-width: 600px) {
+  .profile__profession {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
