Добавлен интерактив с попапом при помощи js

--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,5 @@
 .popup__button {
+  margin-top: 18px;
   background-color: #000;
   height: 50px;
   border-radius: 2px;
@@ -20,5 +21,6 @@
   .popup__button {
     font-size: 14px;
     line-height: 17px;
+    margin-top: 15px;
   }
 }
