--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,7 @@
 .header {
   width: 880px;
+  padding-bottom: 41px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 984px) {
