--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,9 +1,10 @@
 .popup__button {
+  border: none;
   margin-top: 18px;
   background-color: #000;
   height: 50px;
   border-radius: 2px;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -14,6 +15,7 @@
 }
 
 .popup__button:hover {
+  cursor: pointer;
   opacity: 0.8;
 }
 
