--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,5 +1,5 @@
 .popup__container {
-  width: 33.6%;
+  max-width: 430px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 984px) {
   .popup__container {
-    width: 232px;
+    max-width: 282px;
     padding: 25px 22px;
   }
 }
