--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -1,9 +1,10 @@
 .popup__field {
+  width: 358px;
   margin: 0;
   border: 0;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 13px;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -12,7 +13,7 @@
 }
 
 .popup__field::-webkit-value {
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -21,7 +22,7 @@
 }
 
 .popup__field::-ms-value {
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -30,7 +31,7 @@
 }
 
 .popup__field::-moz-value {
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -40,4 +41,10 @@
 
 .popup__field:focus {
   outline: none;
+}
+
+@media screen and (max-width: 984px) {
+  .popup__field {
+    width: 238px;
+  }
 }
