--- a/blocks/profile/__name-edit/profile__name-edit.css
+++ b/blocks/profile/__name-edit/profile__name-edit.css
@@ -3,8 +3,9 @@
   gap: 18px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 984px) {
   .profile__name-edit {
-    gap: 15.25px;
+    gap: 10px;
+    margin-left: 30px;
   }
 }
