--- a/blocks/element/__like/_active/element__like_active.css
+++ b/blocks/element/__like/_active/element__like_active.css
@@ -1,4 +1,3 @@
 .element__like_active {
-  background-image: url(../../../../images/like_active.svg);
-  background-repeat: no-repeat;
+  background: url(../../../../images/like_active.svg) no-repeat;
 }
