--- a/blocks/popup/__krest/popup__krest.css
+++ b/blocks/popup/__krest/popup__krest.css
@@ -1,4 +1,5 @@
 .popup__krest {
+  margin: 0;
   border: none;
   width: 35px;
   height: 35px;
@@ -18,9 +19,9 @@
 @media screen and (max-width: 984px) {
   .popup__krest {
     right: 0;
-    width: 23px;
-    height: 23px;
+    width: 20px;
+    height: 20px;
     background-size: 20px 20px;
-    top: -36px;
+    top: -30px;
   }
 }
