--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -10,3 +10,9 @@
 .element:hover {
   transform: scale(1.1);
 }
+
+@media screen and (max-width: 600px) {
+  .element:hover {
+    transform: scale(1.03);
+  }
+}
