--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -1,4 +1,5 @@
 .popup__error {
+  width: 358px;
   padding-top: 5px;
   font-family: 'Inter';
   font-style: normal;
@@ -7,4 +8,10 @@
   line-height: 15px;
   color: #FF0000;
   height: 30px;
+}
+
+@media screen and (max-width: 984px) {
+  .popup__error {
+    width: 238px;
+  }
 }
